Renamed these because surefire was not recognizing them